# EulerProject

./: .gitignore  CMakeLists.txt  Readme.md  build.sh  license
.github/workflows/: cmake.yml
bluepill_dfu/: .mxproject  CMakeLists.txt  Makefile  bulepill-dfu.ioc
bluepill_dfu/Core/Inc/: main.h
bluepill_dfu/Core/Src/: gpio.c  main.c
bluepill_dfu/Drivers/: CMakeLists.txt
bluepill_dfu/Middlewares/: CMakeLists.txt
bluepill_dfu/USB_DEVICE/: CMakeLists.txt
bluepill_dfu/USB_DEVICE/App/: usb_device.c  usbd_desc.c  usbd_dfu_if.c
cmake/: arm-none-eabi.cmake
